# RetroEmulator

./: .gitignore  CMakeLists.txt  README.md
src/: emulator_launcher.cpp  emulator_launcher.h  game_metadata.h  igdb_client.cpp  igdb_client.h  main.cpp  save_manager.cpp  save_manager.h  sdl_ui.cpp  sdl_ui.h  ui.cpp  ui.h
